fix for bootstrap properties code completion replacing existing line (#306)
* fix for bootstrap properties code completion replacing existing line

* adding copyright

Signed-off-by: Arun Venmany <Arun.Kumar.V.N@ibm.com>

---------

Signed-off-by: Arun Venmany <Arun.Kumar.V.N@ibm.com>